--- a/gallery.html
+++ b/gallery.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Image Gallery</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="gallery.css" type="text/css">
 </head>
 <body>
 
 <!--Navbar Menu-->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -19,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">FOTOS</a>
+            <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture"></span> FOTOS</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-nav-demo">
@@ -38,7 +39,7 @@
 <!--Jumbotron-->
 <div class="container">
     <div class="jumbotron">
-        <h1>The Image Gallery</h1>
+        <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
         <p>gslgsg slkhgkls lkshdfl</p>
     </div>
 
