Added finishing touches and completed Fotos application.

--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Image Gallery</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="gallery.css" type="text/css">
 </head>
 <body>
@@ -39,8 +40,8 @@
 <!--Jumbotron-->
 <div class="container">
     <div class="jumbotron">
-        <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
-        <p>gslgsg slkhgkls lkshdfl</p>
+        <h1><i class="fa fa-camera-retro" aria-hidden="true"></i> The Image Gallery</h1>
+        <p>Browse these beautiful images that I didn't take</p>
     </div>
 
     <div class="row">
